--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 </li>
             </ul>
         </section>
-        <section class="third-section">
+        <section class="section">
             <h2 class="subtitle">Our Team</h2>
             <ul>
                 <li class="list">
