--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </section>
         <section class="section">
             <h2 class="subtitle">OURTEAM</h2>
-            <ul>
+            <ul class="section-list">
                 <li class="list">
                     <h3 class="list-title">Strategy</h3>
                     <p class="list-text">Our goal is to identify the business problem to walk away with the perfect and
@@ -81,7 +81,7 @@
         </section>
         <section class="third-section">
             <h2 class="subtitle">Our Team</h2>
-            <ul>
+            <ul class="section-list">
                 <li class="list">
                     <img src="./images/img1.jpg" alt="img" width="264" class="img">
                     <h3 class="list-title">Mark Guerrero</h3>
