--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         </section>
         <section class="section">
             <h2 class="subtitle">Our Portfolio</h2>
-            <ul>
+            <ul section-list>
                 <li class="list">
                     <img src="./images/img5.jpg" alt="img" width="360" class="img">
                     <h3 class="list-title">Banking App</h3>
