--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </ul>
         </section>
         <section class="section">
-            <h2 class="subtitle">Our Portfolio</h2>
+            <h2 class="fourth-subtitle">Our Portfolio</h2>
             <ul class="section-list"">
                 <li class="list">
                     <img src="./images/img5.jpg" alt="img" width="360" class="img">
