--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
             <button type="button" class="button">Order Service</button>
         </section>
         <section class="section">
+            <h2>title</h2>
             <ul class="section-list">
                 <li class="list">
                     <h3 class="list-title">Strategy</h3>
