--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <h1 class="page-title">Effective Solutions for Your Business</h1>
             <button type="button" class="button">Order Service</button>
         </section>
-        <section class="section">
+        <section class="second-section">
             <h2>title</h2>
             <ul class="section-list">
                 <li class="list">
