--- a/index.html
+++ b/index.html
@@ -51,11 +51,14 @@
         <!-- HERO SECTION -->
 
         <section class="section">
+            <div class="container">
             <h1 class="page-title">Effective Solutions for Your Business</h1>
             <button type="button" class="button">Order Service</button>
+            </div>
         </section>
         <section class="second-section">
-            <h2>title</h2>
+           <div class="container">
+            <h2>Benefits</h2>
             <ul class="section-list">
                 <li class="list">
                     <h3 class="list-title">Strategy</h3>
@@ -80,6 +83,7 @@
                     <p class="list-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
             </ul>
+        </div>
         </section>
         <section class="third-section">
             <h2 class="subtitle">Our Team</h2>
