--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     </div>
                 </li>
                 <li class="third-list">
-                    <div class="list-div">
+                    <div class="list-image">
                     <img src="./images/img3.jpg" alt="img" width="264" class="img">
                     <h3 class="list-title">Camila Garcia</h3>
                     <p class="list-text">Marketing</p>
