--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             </ul>
         </section>
     </main>
-  <footer>
+  <footer class="page-footer">
     <div class="container">
         <a class="logotype" href="./index.html">
             Web<span class="footer-logotype-span">Studio</span>
