--- a/index.html
+++ b/index.html
@@ -88,34 +88,30 @@
          <div class="container">
             <h2 class="subtitle">Our Team</h2>
             <ul class="section-list">
-                <div class="container">
                 <li class="third-list">
                     <img src="./images/img1.jpg" alt="img" width="264" class="img">
+                     <div class="list-div">
                     <h3 class="list-title">Mark Guerrero</h3>
                     <p class="list-text">Product Designer</p>
                 </li>
-                </div>
-                <div class="container">
                 <li class="third-list">
                     <img src="./images/img2.jpg" alt="img" width="264" class="img">
+                     <div class="list-div">
                     <h3 class="list-title">Tom Ford</h3>
                     <p class="list-text">Frontend Developer</p>
                 </li>
-                </div>
-                 <div class="container">
                 <li class="third-list">
                     <img src="./images/img3.jpg" alt="img" width="264" class="img">
+                      <div class="list-div">
                     <h3 class="list-title">Camila Garcia</h3>
                     <p class="list-text">Marketing</p>
                 </li>
-                 </div>
-                 <div class="container">
                 <li class="third-list">
                     <img src="./images/img4.jpg" alt="img" width="264" class="img">
+                      <div class="list-div">
                     <h3 class="list-title">Daniel Wilson</h3>
                     <p class="list-text">UI Designer</p>
                 </li>
-                </div>
             </ul>
          </div>
         </section>
