--- a/index.html
+++ b/index.html
@@ -119,43 +119,43 @@
             <h2 class="subtitle">Our Portfolio</h2>
             <ul class="section-list">
                 <li class="list">
-                     <div>
                     <img src="./images/img5.jpg" alt="img" width="360" class="img">
+                     <div class="list-div">
                     <h3 class="list-title">Banking App</h3>
                     <p class="list-text">App</p>
-                          </div>
+                     </div>
                 </li>
                 <li class="list">
-                     <div>
                     <img src="./images/img6.jpg" alt="img" width="360" class="img">
+                     <div class="list-div">
                     <h3 class="list-title">Cashless Payment</h3>
                     <p class="list-text">Marketing</p>
                     </div>
                 </li>
                 <li class="list">
-                     <div>
                     <img src="./images/img7.jpg" alt="img" width="360" class="img">
+                     <div class="list-div">
                     <h3 class="list-title">Meditation App</h3>
                     <p class="list-text">App</p>
                     </div>
                 </li>
                 <li class="list">
-                     <div>
                     <img src="./images/img8.jpg" alt="img" width="360" class="img">
+                     <div class="list-div">
                     <h3 class="list-title">Taxi Service</h3>
                     <p class="list-text">Marketing</p>
                     </div>
                 </li>
                 <li class="list">
-                     <div>
                     <img src="./images/img9.jpg" alt="img" width="360" class="img">
+                     <div class="list-div">
                     <h3 class="list-title">Screen Illustrations</h3>
                     <p class="list-text">Design</p>
                     </div>
                 </li>
                 <li class="list">
-                     <div>
                     <img src="./images/img10.jpg" alt="img" width="360" class="img">
+                     <div class="list-div">
                     <h3 class="list-title">Online Courses</h3>
                     <p class="list-text">Marketing</p>
                      </div>
