--- a/index.html
+++ b/index.html
@@ -93,24 +93,28 @@
                      <div class="list-div">
                     <h3 class="list-title">Mark Guerrero</h3>
                     <p class="list-text">Product Designer</p>
+                    </div>
                 </li>
                 <li class="third-list">
                     <img src="./images/img2.jpg" alt="img" width="264" class="img">
                      <div class="list-div">
                     <h3 class="list-title">Tom Ford</h3>
                     <p class="list-text">Frontend Developer</p>
+                    </div>
                 </li>
                 <li class="third-list">
                     <img src="./images/img3.jpg" alt="img" width="264" class="img">
                       <div class="list-div">
                     <h3 class="list-title">Camila Garcia</h3>
                     <p class="list-text">Marketing</p>
+                    </div>
                 </li>
                 <li class="third-list">
                     <img src="./images/img4.jpg" alt="img" width="264" class="img">
                       <div class="list-div">
                     <h3 class="list-title">Daniel Wilson</h3>
                     <p class="list-text">UI Designer</p>
+                     </div>
                 </li>
             </ul>
          </div>
