--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <header class="page-header">
-        <div class="container display">
+        <div class="container .display">
         <nav class="page-navigator">
             <a class="logotype" href="./index.html">
                 Web<span class="logotype-span">Studio</span>
@@ -50,7 +50,7 @@
         <!-- HERO SECTION -->
 
         <section class="section">
-            <div class="container display">
+            <div class="container .display">
             <h1 class="page-title">Effective Solutions for Your Business</h1>
             <button type="button" class="button">Order Service</button>
             </div>
@@ -85,7 +85,7 @@
         </div>
         </section>
         <section class="third-section">
-         <div class="container display">
+         <div class="container .display">
             <h2 class="subtitle">Our Team</h2>
             <ul class="section-list">
                 <li class="third-list">
@@ -170,7 +170,7 @@
         </section>
     </main>
   <footer class="page-footer">
-    <div class="container display">
+    <div class="container .display">
         <a class="second-logotype" href="./index.html">
             Web<span class="footer-logotype-span">Studio</span>
         </a>
