--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <header class="page-header">
-        <div class="container .display">
+        <div class="container">
         <nav class="page-navigator">
             <a class="logotype" href="./index.html">
                 Web<span class="logotype-span">Studio</span>
@@ -85,7 +85,7 @@
         </div>
         </section>
         <section class="third-section">
-         <div class="container .display">
+         <div class="container">
             <h2 class="subtitle">Our Team</h2>
             <ul class="section-list">
                 <li class="third-list">
@@ -120,7 +120,7 @@
          </div>
         </section>
         <section class="fourth-section">
-             <div class="container display">
+             <div class="container">
             <h2 class="subtitle">Our Portfolio</h2>
             <ul class="fourth-section-list">
                 <li class="fourth-list">
@@ -170,7 +170,7 @@
         </section>
     </main>
   <footer class="page-footer">
-    <div class="container .display">
+    <div class="container ">
         <a class="second-logotype" href="./index.html">
             Web<span class="footer-logotype-span">Studio</span>
         </a>
