--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <!-- HERO SECTION -->
 
         <section class="section">
-            <div class="container .display">
+            <div class="container">
             <h1 class="page-title">Effective Solutions for Your Business</h1>
             <button type="button" class="button">Order Service</button>
             </div>
