--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     </main>
   <footer class="page-footer">
     <div class="container display">
-        <a class="second-logotype inline" href="./index.html">
+        <a class="second-logotype second-class" href="./index.html">
             Web<span class="footer-logotype-span">Studio</span>
         </a>
         <p class="logotype-text" style="color: #F4F4FD">Increase the flow of customers and sales for your business with
