--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
                 Web<span class="logotype-span">Studio</span>
             </a>
             <ul class="list-container">
-                <li class="nav-list">
+                <li class="nav-list  ::after">
                     <a class="menu-link" href="./index.html">Studio</a>
                 </li>
-                <li class="nav-list">
+                <li class="nav-list" ::after>
                     <a class="menu-link" href="">Portfolio</a>
                 </li>
-                <li class="nav-list">
+                <li class="nav-list" ::after> 
                     <a class="menu-link" href="">Contacts</a>
                 </li>
             </ul>
