--- a/index.html
+++ b/index.html
@@ -64,22 +64,38 @@
                     <p class="list-text">Our goal is to identify the business problem to walk away with the perfect and
                         creative solution.
                     </p>
+                    <div class="icons-div">
+                        <svg width="64" height"64">
+                        <use href></use></svg>
+                    </div>
                 </li>
                 <li class="second-list">
                     <h3 class="list-title">Punctuality</h3>
                     <p class="list-text">Bring the key message to the brand's audience for the best price within the
                         shortest possible
                         time.</p>
+                    <div class="icons-div">
+                        <svg width="64" height"64">
+                        <use href></use></svg>
+                    </div>
                 </li>
                 <li class="second-list">
                     <h3 class="list-title">Diligence</h3>
                     <p class="list-text">Research and confirm brands that present the strongest digital growth
                         opportunities and
                         minimize risk.</p>
+                    <div class="icons-div">
+                        <svg width="64" height"64">
+                        <use href></use></svg>
+                    </div>
                 </li>
                 <li class="second-list">
                     <h3 class="list-title">Technologies</h3>
                     <p class="list-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                      <div class="icons-div">
+                        <svg width="64" height"64">
+                        <use href></use></svg>
+                    </div>
                 </li>
             </ul>
         </div>
