--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                      <div class="list-div">
                     <h3 class="team-list-title">Mark Guerrero</h3>
                     <p class="team-list-text">Product Designer</p>
-                        <ul class="cosial-list">
+                        <ul class="social-list">
                             <li class="social-li"></li>
                         </ul>
                     </div>
@@ -139,7 +139,7 @@
                       <div class="list-div">
                     <h3 class="team-list-title">Daniel Wilson</h3>
                     <p class="team-list-text">UI Designer</p>
-                          <ul class="cosial-list">
+                          <ul class="sosial-list">
                             <li class="social-li"></li>
                         </ul>
                      </div>
