--- a/src/index.html
+++ b/src/index.html
@@ -1,25 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/styles.css" />
-    <script type="module" src="./main.js"></script>
-    <title>Gallery</title>
-  </head>
-  <body>
-    <form class="search-form">
-      <input
-        class="search-input"
-        type="text"
-        name="search"
-        placeholder="Search images..."
-      />
-      <button class="btn-search" type="submit">Search</button>
-    </form>
-    <ul class="gallery"></ul>
-    <button type="button" class="load">Load more</button>
-    <div class="loader" hidden></div>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>HW_12</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+    integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="./css/styles.css" />
+</head>
+
+<body>
+  <form class="search-form js-search-form">
+    <div class="form-group">
+      <label for="searchQuery"></label>
+      <input type="text" name="query" class="form-control" id="searchQuery" placeholder="Search images..."
+        autocomplete="off" />
+    </div>
+    <button type="submit" class="submit-btn">Search</button>
+  </form>
+
+  <div class="gallery-container">
+    <ul class="images js-images-container"></ul>
+  </div>
+  <span class="loader hidden" role="status" aria-hidden="true"></span>
+  <button class="btn-show-more js-waiting-text hidden" aria-hidden="true">Load more images</button>
+  <script src="./main.js" type="module" defer></script>
+
+</body>
+
 </html>
